# chessboard

./: .gitignore  .pylintrc  README.md  button.py  cached_objects.py  config.py  epaper.py  epd4in2.py  files.py  frame_array.py  frame_buffers.py  gpio.py  lights.py  main.py  mypy.ini  rodent_personalities_uci.py  serial_arduino.py  setup.py  show_cpu_temp.sh
arduino/NANO/arduino_nano/: an32183a.cpp  an32183a.h  arduino_nano.ino
arduino/chesspi/: chesspi.ino
arduino/i2c_scanner/: i2c_scanner.ino
arduino/mcp23017_test/: mcp23017_test.ino
arduino/mcp23S17_test/: mcp23S17_test.ino
arduino/reed_matrix_test/: reed_test.ino
arduino/test_an32183a/: CMakeLists.txt  an32183a.cpp  an32183a.h  test_an32183a.ino
arduino/test_an32183a/print_all_registers/: print_all_registers.ino
arduino/test_as1130/: as1130_flow.txt  test_as1130.ino
arduino/test_coulomb counter/coulomb/: coulomb.ino
arduino/test_datalogger/: test_datalogger.ino
arduino/test_ds1307/: test_ds1307.ino
arduino/test_eeprom/: eeprom.ino
arduino/test_powerled/: test_powerled.ino
arduino/test_voltmeter/: test_voltmeter.ino
arduino/tlc_5940_leds/: matrix_testing.ino
chess/: __init__.py
engines/cinnamon/: cinnamon
engines/galjoen/: galjoen_eng
engines/gnuchess/: TODO.txt  gnuchess
engines/greko/: GreKo
engines/laser/: laser
engines/rodent/: personalities_info.csv  roden_uci.yaml  rodent.uci  rodentIII
engines/rodent/personalities/: lea.txt  sloth.txt
engines/stockfish/: stockfish
hardware_test/: jsonpickle_test.py  mcp23s17_test.py  screen_frames_test.py
test/: test_epaper.py
(+1 files in other folders)
